--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="css/style.css">
+    <title>Assignment Solution for Module 2</title>
+</head>
+<body>
+    <h1>Our Menu</h1>
+    <div class="row">
 
+        <section class="column">
+            <h2 class="menu1">Chicken</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc.</p>
+        </section>
+        
+        <section class="column">
+            <h2 class="menu2">Beef</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc.</p>
+        </section>
+
+        <section class="column" id="Clast">
+            <h2 class="menu3">Sushi</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc.</p>
+        </section>
+
+    </div>
+</body>
+</html>
