--- a/index.html
+++ b/index.html
@@ -2,29 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="css/style.css">
-    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>Assignment Solution for Module 3</title>
 </head>
 <body>
+    <header>
+        <div>
+            <h1 >Food, LLC</h1>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="#">Chicken</a></li>
+                    <li><a href="#">Beef</a></li>
+                    <li><a href="#">Sushi</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <h1>Our Menu</h1>
-    <div class="row">
-
+    <div id="sections" class="row">
         <section class="column">
             <h2 class="menu1">Chicken</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc.</p>
         </section>
         
-        <section class="column">
+        <section class="column" id="column2">
             <h2 class="menu2">Beef</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc.</p>
         </section>
 
-        <section class="column" id="Clast">
+        <section class="column Clast">
             <h2 class="menu3">Sushi</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc.</p>
         </section>
-
     </div>
 </body>
 </html>
