--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     </header>
     <h1 class="text-center"><b>Our Menu</b></h1>
     <div id="sections" class="row container-fluid">
-        <section class="column">
+        <section class="column tall-section">
             <h2 id="menu1">Chicken</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores officiis temporibus labore, quasi quaerat assumenda ad itaque architecto similique nesciunt quo nobis, delectus, magnam rerum hic neque totam blanditiis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
         </section>
         
-        <section class="column" id="column2">
+        <section class="column tall-section" id="column2">
             <h2 id="menu2">Beef</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores officiis temporibus labore, quasi quaerat assumenda ad itaque architecto similique nesciunt quo nobis, delectus, magnam rerum hic neque totam blanditiis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
         </section>
 
-        <section class="column Clast">
+        <section class="column Clast tall-section">
             <h2 id="menu3">Sushi</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores officiis temporibus labore, quasi quaerat assumenda ad itaque architecto similique nesciunt quo nobis, delectus, magnam rerum hic neque totam blanditiis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
         </section>
     </div>
     
