--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
             <div id="collapsable-nav" class="navbar-collapse collapse">
                 <ul id="nav-list" class="nav navbar-nav">
-                    <li>
-                        <a href="index.html">Chicken</a>
+                    <li >
+                        <a  class="text-center" href="index.html">Chicken</a>
                     </li>
                     <li>
                         <a href="index.html">Beef</a>
