--- a/index.html
+++ b/index.html
@@ -1,56 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
-    <title>Assignment Solution for Module 3</title>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
-    <header>
-        <nav id="header-nav" class="navbar navbar-default">
-            <div class="navbar-header">
-                <h1><b>Food, LLC</b></h1>
-                <button type="button" id="navbarToggle" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                </button>
-            </div>
-            <div id="collapsable-nav" class="navbar-collapse collapse">
-                <ul id="nav-list" class="nav navbar-nav">
-                    <li >
-                        <a  class="text-center" href="index.html">Chicken</a>
-                    </li>
-                    <li>
-                        <a href="index.html">Beef</a>
-                    </li>
-                    <li>
-                        <a href="index.html">Sushi</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <h1 class="text-center"><b>Our Menu</b></h1>
-    <div id="sections" class="row container-fluid">
-        <section class="column tall-section">
-            <h2 id="menu1">Chicken</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores officiis temporibus labore, quasi quaerat assumenda ad itaque architecto similique nesciunt quo nobis, delectus, magnam rerum hic neque totam blanditiis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
-        </section>
-        
-        <section class="column tall-section" id="column2">
-            <h2 id="menu2">Beef</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores officiis temporibus labore, quasi quaerat assumenda ad itaque architecto similique nesciunt quo nobis, delectus, magnam rerum hic neque totam blanditiis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
-        </section>
-
-        <section class="column Clast tall-section">
-            <h2 id="menu3">Sushi</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores officiis temporibus labore, quasi quaerat assumenda ad itaque architecto similique nesciunt quo nobis, delectus, magnam rerum hic neque totam blanditiis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut purus eget sapien fermentum aliquam. Nullam nec nunc nec nunc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat facere obcaecati, minima similique autem accusantium dolores cupiditate natus, aperiam voluptatem numquam aut. Earum sapiente, sed aut voluptatibus dicta aperiam assumenda!</p>
-        </section>
-    </div>
-    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
